--- a/GitUpGuide-master/index.html
+++ b/GitUpGuide-master/index.html
@@ -47,7 +47,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Your Name</h1>
+      <h1>Soham Sawant</h1>
       <p>I'm a <span class="typed" data-typed-items="Designer, Developer, Freelancer"></span></p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -71,7 +71,6 @@
         <div class="row">
           <div class="col-lg-4">
             <!-- Generate Yout avatar at https://getavataaars.com/ -->
-            <img src="assets/img/girl.png" class="img-fluid" alt="">
             <!-- <img src="assets/img/boy.png" class="img-fluid" alt=""> -->
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
@@ -82,17 +81,17 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 May 1995</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 2 Sept 2002</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 7506821507</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Mumbai, India</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 20</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 18</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelors</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> email@example.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> soham.sawant200@gmail.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
                 </ul>
               </div>
@@ -234,19 +233,19 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Your Name</h4>
+              <h4>Soham Sawant</h4>
               <p><em>I care deeply about building software that are usable and helpful for the most number of people possible.</em></p>
               <ul>
                 <li>Mumbai, India</li>
-                <li>(+91) 98765-43210</li>
-                <li>email@example.com</li>
+                <li>(+91) 7506821507</li>
+                <li>soham.sawant200@gmail.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Bachelor of Engineering, Computer Science</h4>
-              <h5>Sept 2018 - Present</h5>
+              <h5>Sept 2020 - 21</h5>
               <p><em>Dwarkadas J. Sanghvi College of Engineering, Mumbai</em></p>
               <p>Current CGPA: 9/10</p>
             </div>
@@ -349,13 +348,13 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>soham.sawant200@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+91 7506821507</p>
               </div>
 
             </div>
@@ -396,7 +395,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Your Name</h3>
+      <h3>Soham Sawant</h3>
       <p>Eat, Sleep, Code, Repeat.</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -404,7 +403,7 @@
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>Your Name</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Soham Sawant</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
